# progphil-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  build.gradle  config.yml  logger.example.yml  pyproject.toml  pyrightconfig.json  requirements.txt  settings.gradle
.github/: CODEOWNERS  DOCKERFILE  pull_request_template.md
.github/ISSUE_TEMPLATE/: chore.md  documentation-request.md  documentation_request.md  story.md
.github/workflows/: ci.yml  deploy-app.yml  deploy-dev.yml  deploy-prd.yml  docker-cd.yml  docker-ci.yml  ghcr-build.yml  gradle.yml  main.yml  perform-pylint-checks.yml  pylint-checks.yml  release-on-merge.yml  release-to-dev.yml  release-to-prd.yml  release.yml
bot/: config.py  main.py
bot/cogs/: announcements.py  anonymous_posting.py  auto_responder.py  auto_tagging.py  currency_converter.py  define_word.py  dev_help.py  error_handling.py  forum_cleanup.py  image_generator.py  job_hiring.py  trivia.py  user_reminder.py  welcome.py
bot/database/: anonymous_posting.py  auto_responder.py  auto_tag.py  config_auto.py  dev_help.py  forum_cleanup.py  (+7 more)
config/: config.yml  dev-config.yml
migrations/: 0_initial_migrations.sql  10_anon_posting_view.sql  11_auto_responder_improvement.sql  12_dev_help_tag.sql  13_welcome.sql  14_user_reminder.sql  15_image_generator.sql  16_dev_help_views.sql  16_string_matching_improvement.sql  18_forum_showcase.sql  18_post_assist.sql  18_thread_showcase.sql  19_thread_showcase.sql  1_improve_auto_tagging.sql  20_add_weekday_field.sql  21_add_enable_accept_solutions.sql  22_drop_accept_solutions_table.sql  23_forum_assist_mark_as_solved_tags.sql  24_forum_assist_mark_as_solved_views.sql  2_create_configs.sql  3_update_auto_tagging.sql  4_job_hiring.sql  5_anonymous_posting.sql  6_currency_converter.sql  7_define_word.sql  8_unify_auto_tagging.sql  9_forum_cleanup.sql  add_enable_mark_as_solved.sql  initial_migrations.sql
progphil/: sample.py
tests/: image_gen.py  scheduler.py
(+86 files in other folders)
